Correction. This is the overflow fix.

--- a/css/home.css
+++ b/css/home.css
@@ -92,12 +92,7 @@ body {
     border-top: none;
 	font-family: "Roboto Light";
 	position: relative;
-}
-
-/*Wrap Text*/
-.textWrap {
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+    width: inherit;
 }
 
 .moveDownOnHover {
